--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="law.cam.lawcam">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <uses-feature android:name="android.hardware.camera"
+        android:required="true" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -18,13 +24,14 @@
         </activity>
 
         <provider
-            android:authorities="law.cam.lawcam.intent.fileprovider"
             android:name="androidx.core.content.FileProvider"
+            android:authorities="law.cam.lawcam.intent.fileprovider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
-                android:name="android.support.File_PROVIDER_PATHS"
-                android:resource="@xml/external" />
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/external"
+                />
         </provider>
     </application>
 
