change package name

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     compileSdkVersion 29
 
     defaultConfig {
-        applicationId "law.cam.lawcam"
+        applicationId "com.lawandgood.lawcam"
         minSdkVersion 16
         targetSdkVersion 29
         versionCode 1
